# pkgctrl

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  config.yaml  go.mod
.github/workflows/: ci.yml  release.yml
pkg/: pkgctrl.go
pkg/providers/: interface.go
pkg/providers/pacman/: pacman.go  pacman_test.go
src/: config.rs  main.rs
src/ci/: main.rs
