[package]
name = "pkgctrl"
version = "0.1.0"
authors = ["Neven Miculinic <neven.miculinic@gmail.com>"]
edition = "2018"

[dependencies]
alpm-utils = "0.7.0"
alpm = {version="~2", features=["git"]}
clap = "~2"
colored = "~2"
dialoguer = "~0.8"
human-panic="~1"
pacmanconf = "~1"
serde_json = { version = "~1"}
serde = {version="~1", features = ["derive"]}
serde_yaml = "~0.8"
structopt = "~0.3"
