[[bin]]
name = "pkgctrl"
path = "src/main.rs"

[[bin]]
name = "ci"
path = "src/ci/main.rs"

[package]
default-run = "pkgctrl"
name = "pkgctrl"
description = "reconcile packages installed on Arch Linux system"
version = "0.1.0"
authors = ["Neven Miculinic <neven.miculinic@gmail.com>"]
edition = "2018"
repository = "https://github.com/nmiculinic/pkgctrl"
license-file = "LICENSE"

[dependencies]
alpm-utils = "0.7.0"
alpm = {version="~2", features=["git"]}
clap = "~2"
colored = "~2"
dialoguer = "~0.8"
handlebars = "~4"
sha2 = "~0.9"
human-panic="~1"
pacmanconf = "~1"
serde_json = { version = "~1"}
serde = {version="~1", features = ["derive"]}
serde_yaml = "~0.8"
structopt = "~0.3"
